--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,16 +9,15 @@
     tools:context="com.example.emxcel.ormroom.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <Button
-        android:id="@+id/bt_get_users"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GET USERS" />
 
-    <TextView
-        android:id="@+id/tv_user_info"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:text="Demo"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
