--- a/app/src/main/res/layout/layout_add_user.xml
+++ b/app/src/main/res/layout/layout_add_user.xml
@@ -59,5 +59,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/bt_cancel"
+            android:layout_width="0dp"
+            android:layout_weight="50"
+            android:text="Cancel"
+            android:layout_margin="5dp"
+            android:layout_height="50dp" />
+        <Button
+            android:id="@+id/bt_ok"
+            android:layout_width="0dp"
+            android:layout_weight="50"
+            android:layout_margin="5dp"
+            android:text="OK"
+            android:layout_height="50dp" />
+    </LinearLayout>
 </LinearLayout>
 
