--- a/app/src/main/res/layout/layout_add_user.xml
+++ b/app/src/main/res/layout/layout_add_user.xml
@@ -40,6 +40,7 @@
 
         <EditText
             android:id="@+id/etUserAge"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
