--- a/app/src/main/res/layout/adapter_user_list.xml
+++ b/app/src/main/res/layout/adapter_user_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,14 +29,33 @@
             android:gravity="center"
             android:text="Age"
             android:layout_height="match_parent" />
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="50dp">
         <TextView
             android:id="@+id/tv_user_premium"
             android:layout_width="0dp"
-            android:layout_weight="10"
+            android:layout_weight="50"
             android:gravity="center"
             android:text="Premuim"
             android:layout_height="match_parent" />
 
+        <TextView
+            android:id="@+id/tv_user_salary"
+            android:layout_width="0dp"
+            android:layout_weight="50"
+            android:gravity="center"
+            android:text="Salary"
+            android:layout_height="match_parent" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/colorAccent"
+        android:layout_height="2dp"></View>
 
 </LinearLayout>
