--- a/app/src/main/res/layout/layout_add_user.xml
+++ b/app/src/main/res/layout/layout_add_user.xml
@@ -53,6 +53,26 @@
         android:paddingBottom="5dp"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Salary" />
+
+        <EditText
+            android:id="@+id/etUserSalary"
+            android:inputType="number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:orientation="vertical">
+
 
         <CheckBox
             android:id="@+id/checkboxPremium"
